added check for changes in edit

--- a/edit/index.html
+++ b/edit/index.html
@@ -53,7 +53,7 @@
 
 						</select>
 					<div class='error'>Entry was empty!</div>
-					<div class='error2'>Please select a entry!</div>
+					<div class='error2'>No change was made</div>
 					<div id='success' class='success'>Entry was added successfully</div>
 
 					<form id='edit-entry'>
