Updated README and altered styling slightly

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 
 	<body>
 
+		<div class='top-bar'></div>
+
 		<span class='sidebar'>
 			
 			<a href="/diary" class='entries-nav'><h1>entries</h1></a><p></p>
