--- a/edit/index.html
+++ b/edit/index.html
@@ -22,6 +22,8 @@
 
 	<body>
 
+		<div class='top-bar'></div>
+
 		<span class='sidebar'>
 			
 			<a href="/diary" class='entries-nav'><h1>entries</h1></a><p></p>
