Fixed delete entry confirmation

--- a/edit/index.html
+++ b/edit/index.html
@@ -57,6 +57,7 @@
 					<div class='error'>Entry was empty!</div>
 					<div class='error2'>No change was made</div>
 					<div class='error3'>No entry was selected</div>
+					<div class='delete-success'>Entry deleted</div>
 					<div id='success' class='success'>Entry was edited successfully</div>
 
 					<form id='edit-entry'>
