link and style fixes

--- a/edit/index.html
+++ b/edit/index.html
@@ -26,9 +26,9 @@
 
 		<span class='sidebar'>
 			
-			<a href="/diary" class='entries-nav'><h1>entries</h1></a><p></p>
-			<a href='/diary/new' class='new-nav'><h1>new</h1></a><p></p>
-			<a href="/diary/edit" class='edit-nav'><h1>edit</h1></a><p></p>
+			<a href="../" class='entries-nav'><h1>entries</h1></a><p></p>
+			<a href='../new' class='new-nav'><h1>new</h1></a><p></p>
+			<a href="../edit" class='edit-nav'><h1>edit</h1></a><p></p>
 			<a href="https://github.com/everythingrob/diary"><h1>about</h1></a>
 			<!-- <p></p><br>
 			<div class='entries-select'>
